# smart-vision-ai-clean

./: .gitignore  DASHBOARD_FIX_REPORT.md  DESIGN_ENHANCEMENTS.md  Procfile  README.md  SECURITY_CSP_CONFIG.md  STATUS_REPORT.md  TESTING_GUIDE.md  activity_logger.py  app.py  app_other.py  app_simple.py  auth.py  data.yaml  dataset_downloader_simple.py  debug.py  download_and_prepare.py  download_kaggle_data.py  favicon-integration.html  package-lock.json  pyproject.toml  requirements.txt  test_gemini_simple.py  test_model.py  train_model.py  train_yolo.py  vercel.py
.ipynb_checkpoints/: activity_logger-checkpoint.py  dataset_downloader-checkpoint.py
data/: sessions.json  users.json
static/css/: contact-fallback.css  premium-style.css  responsive.css
static/js/: crypto-polyfill.js
templates/: 3DAnime.html  about.html  admin.html  contact.html  dashboard.html  detection.html  features.html  home.html  login.html  materials.html  signup.html
